update for ARM/graviton to pipeline and SAM template

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -115,6 +115,10 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: aws-actions/setup-sam@v1
 
+      # docker setup for ARM/Graviton
+      - name: Setup Docker for cross architecture build
+        run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - name: Build resources
         run: sam build --template ${SAM_TEMPLATE} --use-container
 
@@ -124,17 +128,6 @@ jobs:
           role-to-assume: arn:aws:iam::718974227478:role/GithubActionsOIDC-Role-FI89LLXFL7RA
           role-duration-seconds: 900 # the ttl of the session, in seconds.
           aws-region: eu-west-1 # use your region here.
-
-      #- name: Assume the testing pipeline user role
-      #  uses: aws-actions/configure-aws-credentials@v1
-      #  with:
-      #    aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-      #    aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-      #    aws-region: ${{ env.TESTING_REGION }}
-      #    role-to-assume: ${{ env.TESTING_PIPELINE_EXECUTION_ROLE }}
-      #    role-session-name: testing-packaging
-      #    role-duration-seconds: 3600
-      #    role-skip-session-tagging: true
 
       - name: Upload artifacts to testing artifact buckets
         run: |
@@ -147,17 +140,6 @@ jobs:
         with:
           name: packaged-testing.yaml
           path: packaged-testing.yaml
-
-      #- name: Assume the prod pipeline user role
-      #  uses: aws-actions/configure-aws-credentials@v1
-      #  with:
-      #    aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-      #    aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-      #    aws-region: ${{ env.PROD_REGION }}
-      #    role-to-assume: ${{ env.PROD_PIPELINE_EXECUTION_ROLE }}
-      #    role-session-name: prod-packaging
-      #    role-duration-seconds: 3600
-      #    role-skip-session-tagging: true
 
       - name: Upload artifacts to production artifact buckets
         run: |
@@ -189,17 +171,6 @@ jobs:
           role-to-assume: arn:aws:iam::718974227478:role/GithubActionsOIDC-Role-FI89LLXFL7RA
           role-duration-seconds: 900 # the ttl of the session, in seconds.
           aws-region: eu-west-1 # use your region here.
-
-      #- name: Assume the testing pipeline user role
-      #  uses: aws-actions/configure-aws-credentials@v1
-      #  with:
-      #    aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-      #    aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-      #    aws-region: ${{ env.TESTING_REGION }}
-      #    role-to-assume: ${{ env.TESTING_PIPELINE_EXECUTION_ROLE }}
-      #    role-session-name: testing-deployment
-      #    role-duration-seconds: 3600
-      #    role-skip-session-tagging: true
 
       - name: Deploy to testing account
         run: |
@@ -242,17 +213,6 @@ jobs:
           role-to-assume: arn:aws:iam::718974227478:role/GithubActionsOIDC-Role-FI89LLXFL7RA
           role-duration-seconds: 900 # the ttl of the session, in seconds.
           aws-region: eu-west-1 # use your region here.    
-
-      #- name: Assume the prod pipeline user role
-      #  uses: aws-actions/configure-aws-credentials@v1
-      #  with:
-      #    aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-      #    aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-      #    aws-region: ${{ env.PROD_REGION }}
-      #    role-to-assume: ${{ env.PROD_PIPELINE_EXECUTION_ROLE }}
-      #    role-session-name: prod-deployment
-      #    role-duration-seconds: 3600
-      #    role-skip-session-tagging: true
 
       - name: Deploy to production account
         run: |
