1. reversed graviton/arm64 back to x86_64 due to PTB error:  Pool timeout: All connections in the connection pool are occupied. Request was *not* sent to Telegram. Consider adjusting the connection pool size or the pool timeout. 2. Added Lifecycle rule to both buckets to delete after 1 day

--- a/template.yaml
+++ b/template.yaml
@@ -28,6 +28,11 @@ Resources:
       - S3EventQueuePolicy
     Properties:
       BucketName: !Ref SourceBucketName
+      LifecycleConfiguration:
+        Rules:
+          - Id: DeleteAfter1Day
+            Status: Enabled
+            ExpirationInDays: 1
       NotificationConfiguration:
         QueueConfigurations:
           - Event: "s3:ObjectCreated:*"
@@ -42,6 +47,11 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Ref DestinationBucketName
+      LifecycleConfiguration:
+        Rules:
+          - Id: DeleteAfter1Day
+            Status: Enabled
+            ExpirationInDays: 1
 
   # Enforce HTTPS only access to S3 bucket #
   BucketForImagePolicy:
@@ -140,7 +150,7 @@ Resources:
       Handler: sendBlurtoTelegram.lambda_handler
       Runtime: python3.11
       Architectures:
-        - arm64
+        - x86_64
       Timeout: 10
       MemorySize: 1024
       ReservedConcurrentExecutions: 1
